[gd_scene load_steps=3 format=2]

[ext_resource path="res://spells/water/water1.gd" type="Script" id=1]
[ext_resource path="res://spells/water/water1_proj.tscn" type="PackedScene" id=2]

[node name="water1" type="Node2D"]

script = ExtResource( 1 )
has_activation = false

[node name="proj1" parent="." index="0" instance=ExtResource( 2 )]

[node name="proj2" parent="." index="1" instance=ExtResource( 2 )]

[node name="proj3" parent="." index="2" instance=ExtResource( 2 )]

[node name="proj4" parent="." index="3" instance=ExtResource( 2 )]

[node name="proj5" parent="." index="4" instance=ExtResource( 2 )]

[node name="lifetime" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="free_timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="area_entered" from="proj1" to="proj1" method="_on_projectile_area_entered"]

[connection signal="area_entered" from="proj2" to="proj2" method="_on_projectile_area_entered"]

[connection signal="area_entered" from="proj3" to="proj3" method="_on_projectile_area_entered"]

[connection signal="area_entered" from="proj4" to="proj4" method="_on_projectile_area_entered"]

[connection signal="area_entered" from="proj5" to="proj5" method="_on_projectile_area_entered"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]

[connection signal="timeout" from="free_timer" to="." method="_on_free_timer_timeout"]


